la til entrepernærskap og bilder til det

--- a/programfag/entreprenørskap/index.html
+++ b/programfag/entreprenørskap/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/global.css">
     <link rel="stylesheet" href="/style/programfag.css">
-    <link rel="stylesheet" href="/style/geofag.css">
+    <link rel="stylesheet" href="/style/entreprenørskap.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Entreprenørskap</title>
 </head>
 <body>
     <header>
-        <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i geofag.css-dokumentet -->
+        <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i entreprenørskap.css-dokumentet -->
         <div id="forside-bilde">
             <h1>Entreprenørskap</h1>
             <!-- knapp tilbake til realfagssiden -->
@@ -22,35 +22,37 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                Geofag handler om å forstå jordas systemer og prosesser, hvordan de virker sammen og hver for
-                seg, og hvordan de former jorda over tid. Faget bidrar til kunnskap om hvordan klimaendringer,
-                naturfarer og ressursutnyttelse påvirker enkeltmennesket og samfunnet.
+                Entreprenørskap faget handler om å starte egen bedrift. Du lærer teori og får praktisk erfaring gjennom å utvikle en egen forretningsidé. Gjennom ungdomsbedrift får du en innføring i økonomi, markedsføring og ledelse. Du vil lære å jobbe selvstendig og samarbeide med andre. Målet er å utvikle din entreprenørskapsevne og skape noe nytt.
             </p>
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
         <div id="fagnummer-knapper">
-            <a href="#fagnummer1" id = "første-fag">Geofag 1</a>
-            <a href="#fagnummer2" id = "andre-fag">Geofag 2</a>
+            <a href="#fagnummer1" id = "første-fag">Entreprenørskap 1</a>
+            <a href="#fagnummer2" id = "andre-fag">Entreprenørskap 2</a>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
-            <h2>Geofag 1</h2>
+            <h2>Entreprenørskap 1</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
-                    <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                    <li>Eksamensform: <b>Muntlig</b></li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>Jordprosesser i geosfæren og hydrosfæren</li>
-                        <li>Naturfarer og -katastrofer som jordskjelv, tsunami, vulkaner, skred og flom</li>
-                        <li>Klimaendringer og ressursutnyttelse, som ferskvann som ressurs, bærekraftig utnyttelse av ressurser som mineraler, ressurser til det grønne skiftet, hydrokarboner og vannkraft</li>
-                        <li>Prosesser som jordas historie og platetektonikk, glasiologi, erosjon, hydrologi og vannetskretsløp</li>
+                        <li><b>Minimumsoppgaver for ungdomsbedrift (UB) i skoleåret</b></li>
+                        <li>1 Registrere ungdomsbedrift, <br>2.Finne og registrere mentor,<br> 3.Utforme forretningsplan/modell, <br>4.Presentere for eksterne, <br>5.Føre regnskap, <br>6.Skrive årsrapport/levere revisjonsberetning</li>
+                        <li><b>Starte/prøve og feile/presentere</b></li>
+                        <li>Ideutvikl, Forretningsidé, Jobbroller, Stiftelsesmøte /Registrere</li>
+                        <li><b>Drive/prøve og feile/presentere</b></li>
+                        <li>HR og ledelse, Økonomi, Forretningsmodell/canvas/plan, Mentor og nettverk, Bærekraft, Produktet, Produksjon, Markedsføring, Profilering og salg, Mesterskap</li>
+                        <li><b>Avslutte/videreføre/restarte/nystarte</b></li>
+                        <li>Årsrapport, Revisjon, Generalforsamling, Avvikle, Attest, CV</li>
+                        <li><b>Repetisjon og teori gjennomgang</b> slutten av skoleåret</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -59,38 +61,38 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        I begge fagene gjennomfører vi geofaglig feltarbeid individuelt eller i par, hvor du
-                        kan teste dine egne hypoteser.
+                        Entreprenørskap faget er helt og fullt praktisk.
+                        Vi jobber som grupper med å starte, drive,
+                        prøve, feile og avslutte egne ungdomsbedrifter ved å sette idéer ut i handling.
+                        Bedrifter kan både tjene penger selv, vinne stipender og få oppstartsstøtte.
+                        Vi starter med innovasjonscamp for å hurtig avklare behov/problem/løsninger, fortsetter med learning pit prosjektbasert læring og utforsker/kritiserer/driver.
+                        Vi jobber tett med Ungt Entreprenørskap og ungdomsbedrift
+konkurranser.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/geofag/isbjørn.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/geofag/vulkan.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/entreprenørskap/pungdom.png" alt="Pundom ub som vant.">
+                    <img src="../../assets/imgs/entreprenørskap/folk.png" alt="Folk som snakker om entreprenørskap.">
                 </div>
                 <div class="elev-sitat">
-                    <h3>Hva mener elevene?</h3>
+                    <h3>Sitat</h3>
                     <p>
                         <i>
-                            ""
+                            "Skal vi … bevare velferdssamfunnet i
+                            fremtiden, så må vi trene unge på å se
+                            muligheter og gjøre noe med dem."
                         </i>
                     </p>
                     <p>
-                        - Tidligere elev
+                        - Ungt Entreprenørskap
                     </p>
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/geofag" target="_blank">Les mer på SNL</a></li>
-                    <li><a href="https://www.udir.no/lk20/gfg01-02" target="_blank">Læreplan</a></li>
+                    <li><a href="https://www.udir.no/lk20/ent01-03/kompetansemaal-og-vurdering/kv526" target="_blank">Kompetansemål</a></li>
                 </div>
-                <!-- legg til interaktivt element her -->
-                <div class="divider-element">
-
-                </div>
-                <div class="interaktivt-element">
-                    <iframe src="/widgets/drag_and_drop_geofag_spill/index.html" width="100%" height="520" style="border: none;"></iframe>
-                </div>
+                <div class="divider-element"></div>
             </div>
         </div>
         <!-- bølgete linje -->
@@ -101,18 +103,17 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
-                    <li>Realfagspoeng: <b>0.5</b></li>
-                    <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
+                    <li>Eksamensform: <b>Skriftlig eller muntlig.</b></li>
+                    <li>Har tentamen/skrivedag hvert semester.</li>
                     <li>Bygger på andre fag: <b>Nei</b></li>
                 </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>Jordprosesser i havet, atmosfæren og kryosfæren</li>
-                        <li>Klimaendringer gjennom jordas historie, menneskeskapte klimaendringer og konsekvenser</li>
-                        <li>Naturfarer og -katastrofer som ekstremvær, orkan, tornado, hetebølger og stormflo</li>
-                        <li>Bærekraftig utnyttelse av energiressurser fra hav og atmosfæren</li>
-                        <li>Vær og klima, inkludert forståelse for luft- og havsirkulasjon, værvarslig og klimaforskning</li>
+                        <li>CASE Entreprenørskap 0år og Virksomhetsutvikling/vekst 3+år</li>
+                        <li>CASE Innovasjon, Internasjonalisering, Org.utvikling og ledelse</li>
+                        <li>CASE Omstillingsevne, Støtteordninger for vekst og utvikling</li>
+                        <li>REPETISJON OG TEORI GJENNOMGANG slutten av skoleåret</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -121,13 +122,12 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        I begge fagene gjennomfører vi geofaglig feltarbeid individuelt eller i par, hvor du
-                        kan teste dine egne hypoteser.
+                        Entreprenørskap faget er helt og fullt praktisk. Vi jobber som grupper med å starte, drive, prøve, feile og avslutte egne ungdomsbedrifter ved å sette idéer ut i handling. Bedrifter kan både tjene penger selv, vinne stipender og få oppstartsstøtte. Vi starter med innovasjonscamp for å hurtig avklare behov/problem/løsninger, fortsetter med learning pit prosjektbasert læring og utforsker/kritiserer/driver. Vi jobber tett med Ungt Entreprenørskap og ungdomsbedrift konkurranser.
                     </p>
                 </div>
                 <div class="avlangt-visuelt-element">
-                    <img src="../../assets/imgs/geofag/tørke.png" alt="Person som driver med kjemi">
-                    <img src="../../assets/imgs/geofag/lyn.png" alt="Person som driver med kjemi">
+                    <img src="../../assets/imgs/entreprenørskap/forretningsmodell.png" alt="Entreprenørskap forettningsmodell.">
+                    <img src="../../assets/imgs/entreprenørskap/ue.png" alt="Person som driver med kjemi">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -142,15 +142,9 @@
                 </div>
                 <div class="mer-informasjon">
                     <h3>Aktuelle lenker</h3>
-                    <li><a href="https://snl.no/geofag" target="_blank">Les mer på SNL</a></li>
-                    <li><a href="https://www.udir.no/lk20/gfg01-02" target="_blank">Læreplan</a></li>
+                    <li><a href="https://www.udir.no/lk20/ent01-03/kompetansemaal-og-vurdering/kv527" target="_blank">Kompetansemål</a></li>
                 </div>
-                <div class="divider-element">
-
-                </div>
-                <div class="interaktivt-element">
-                    <iframe src="/widgets/geofag_quiz/index.html" width="510" height="570" style="border: none;"></iframe>
-                </div>
+                <div class="divider-element"></div>
             </div>
         </div>
         <!-- bølgete linje -->
@@ -158,8 +152,10 @@
         <!-- legg til flere prosjekter her -->
         <div class="flere-prosjekter">
             <h3>Flere prosjekter</h3>
-            <p>Her er en minifilm om Natalie og Stine sitt feltarbeid i 2020 som vant Junior Vannpris!</p>
-            <a href="https://www.youtube.com/watch?v=MNb5IhX_Rlk" target="_blank">Se videoen her</a>
+            <p>Pungdom elevbedrift:</p>
+            <a href="https://www.pungdom.no/" target="_blank">Nettside</a>
+            <p>Printify prototypes elevbedrift:</p>
+            <a href="https://tbf3d.com/r/printify" target="_blank">Nettside</a>
         </div>
     </main>
     <!-- Footer -->
