Endret så det bare står velkommen fordi det ble bulky på mobil

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -30,7 +30,7 @@
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
-            <p id="intro">Velkommen til Elvebakken realfag! Her kan du utforske de ulike programfagene vi tilbyr, og finne ut mer om hva som interesserer deg. Klikk på et programfag for å lese mer. Eller klikk på "Vis alle" for å se en oversikt over alle programfagene. Og enda bedre, kom på besøk til oss på Elvebakken og se hvordan det er å være elev hos oss! Dette er placeholder tekst, og vil bli erstattet med noe mer fornuftig senere.</p>
+            <p id="intro">Velkommen til Elvebakken realfag!</p>
         </div>
 
         <!-- meny over programfagene-->
