La til entrpernærskap tiles

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -43,7 +43,7 @@
             <div id="fag_meny">
                 <!-- om antall fag endres, må også css endres (grid_template_columns) -->
                 <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                    <img src="/assets/imgs/entreprenørskap/handshake.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Entreprenørskap</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -127,12 +127,12 @@
         <!-- For å fjerne fag, slett den "fag-element" diven du vil fjerne. -->
         <div id="fag-oversikt">
             <div class="fag-element">
-                <img src="/assets/imgs/fysikk/placeholder_fysikk.png" class="fag-bilde">
+                <img src="/assets/imgs/entreprenørskap/pungdom.png" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Fysikk</h3>
-                    <p class="fag-beskrivelse">Fysikk på Elvebakken gir deg innsikt i alt fra kvantefysikk til astrofysikk. Du vil lære om de grunnleggende prinsippene som styrer universet og få muligheten til å utforske spennende eksperimenter.</p>
-                    <p class="fag-sitat">"Det mest uforståelige med universet er at det er forståelig." - Albert Einstein</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/fysikk/">Se mer →</a>
+                    <h3 class="fag-tittel">Entreprenørskap</h3>
+                    <p class="fag-beskrivelse">Få verdifull erfaring for fremtiden. Start din egen bedrift, lær av feil og suksesser, og bygg et solid nettverk. Lær å tenke som en gründer. Gjennom praktisk arbeid med egen bedrift utvikler du ferdigheter innen økonomi, markedsføring og ledelse.</p>
+                    <p class="fag-sitat">"Vi må la innovasjon og entreprenørskap få blomstre, da vil ikke det å fase ut oljen innen 2030 være noe problem." - Nina Brodahl, MDG</p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/entreprenørskap/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
