La til plasser og lenker til alle ssø fagene i hovedsiden
Sitat og beskrivelse manger da,  og gjerne et annet bilde enn placeholder

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -132,68 +132,120 @@
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Kjemi</h3>
-                    <p class="fag-beskrivelse">Kjemi på Elvebakken dekker alt fra grunnleggende kjemiske reaksjoner til avanserte laboratorieteknikker. Du vil lære om stoffenes egenskaper og hvordan de interagerer med hverandre.</p>
-                    <p class="fag-sitat">"Kjemien har et eget språk, med egne symboler og notasjoner, som brukes for å beskrive sammenhenger og reaksjoner." - Snl.no</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/kjemi/">Se mer →</a>
+                    <h3 class="fag-tittel">Engelsk</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"Language is power, life, and the instru-ment of culture, the instrument of domination, and liberation." - Angela Carter</p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/engelsk/">Se mer →</a>
                 </div>
-                <img src="/assets/imgs/kjemi/labbilde.png" class="fag-bilde">
+                <img src="/assets/imgs/engelsk/" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="/assets/imgs/biologi/dna_grønn.png" class="fag-bilde">
+                <img src="/assets/imgs/" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Biologi</h3>
-                    <p class="fag-beskrivelse">Biologi på Elvebakken gir deg en dyp forståelse av levende organismer og deres miljø. Du vil lære om alt fra celler og genetikk til økologi og evolusjon.</p>
-                    <p class="fag-sitat">"Ingenting i biologien gir mening, untatt i lys av evolusjonen." - T.Dobzhansky</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/biologi/">Se mer →</a>
-                </div>
-            </div>
-            <div class = "fag-element">
-                <!-- Om bilde skal endres endre dettee bilde elementet.-->
-                <div class = "fag-info">
-                    <!-- Endre info/tittel her -->
-                    <h3 class="fag-tittel">IT</h3>
-                    <p class="fag-beskrivelse">Informasjonsteknologi (IT) på Elvebakken er et spennende og praktisk fag hvor du får lære alt fra programmering og nettverk til spillutvikling og kunstig intelligens.</p>
-                    <p class="fag-sitat">"Beste shitten ever!" - Mann Med Langt Navn 2STD</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/informasjonsteknologi/">Se mer →</a>
-                </div>
-                <img src="/assets/imgs/informasjonsteknologi/placeholder_IT.png" class="fag-bilde">
-            </div>
-            <div class="fag-element">
-                <img src="/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png" class="fag-bilde">
-                <div class="fag-info">
-                    <h3 class="fag-tittel">Teknologi og forskningslære</h3>
-                    <p class="fag-beskrivelse">Teknologi- og forskningslære på Elvebakken tar deg med inn i verden av innovasjon, teknologi og vitenskapelig utforskning. Dette faget gir deg et bredt perspektiv på teknologiske prinsipper og forskningsmetoder.</p>
-                    <p class="fag-sitat">"Quote." - Noen</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/tekforsk/">Se mer →</a>
+                    <h3 class="fag-tittel">Historie og filosofi</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - </p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/hifi/">Se mer →</a>
                 </div>
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Geofag</h3>
-                    <p class="fag-beskrivelse">Geofag på Elvebakken tar deg med på en reise gjennom jordens mange lag og prosesser. Her vil du utforske de vitenskapelige prinsippene som ligger til grunn for forståelsen av jorden og dens geologiske, atmosfæriske og hydrologiske systemer.</p>
-                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/geofag/">Se mer →</a>
+                    <h3 class="fag-tittel">Kinesisk 2</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - r</p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/kinesisk2/">Se mer →</a>
                 </div>
-                <img src="/assets/imgs/geofag/strand.png" class="fag-bilde">
+                <img src="/assets/imgs/" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="/assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
+                <img src="/assets/imgs/" class="fag-bilde">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk - R</h3>
-                    <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
-                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
+                    <h3 class="fag-tittel">Markedsføring og ledelse</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - </p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/markedsføring_og_ledelse/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Politikk og menneskerettigheter</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - r</p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/pom">Se mer →</a>
+                </div>
+                <img src="/assets/imgs/" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="/assets/imgs/" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Språk 3</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - </p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/språk3/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Psykologi</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - r</p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/psykologi/">Se mer →</a>
+                </div>
+                <img src="/assets/imgs/psykologi/placeholder_psykologi.jpg" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="/assets/imgs/rettslære/placeholder_rettslære.jpg" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Rettslære</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - </p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/rettslære/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Samfunnsgeografi</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - r</p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/samfunnsgeografi/">Se mer →</a>
+                </div>
+                <img src="/assets/imgs/samfunnsgeografi/placeholder_samfunnsgeografi.jpg" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="/assets/imgs/" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Sosialkunnskap</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - </p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/sosialkunnskap/">Se mer →</a>
+                </div>
+            </div>
+            <div class="fag-element">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Matematikk-R</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - r</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/r_matte/">Se mer →</a>
                 </div>
+                <img src="/assets/imgs/matte_r/matte_r_placeholder.png" class="fag-bilde">
+            </div>
+            <div class="fag-element">
+                <img src="/assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
+                <div class="fag-info">
+                    <h3 class="fag-tittel">Matematikk-S</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - </p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/s_matte/">Se mer →</a>
+                </div>
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Matematikk - S</h3>
-                    <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
-                    <p class="fag-sitat">"Steiner er sick da!" - Spes type 2STA</p>
-                    <a class ="fag-se-mer-knapp" href="/programfag/s_matte/">Se mer →</a>
+                    <h3 class="fag-tittel">Samfunnsøkonomi</h3>
+                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-sitat">"" - r</p>
+                    <a class ="fag-se-mer-knapp" href="/programfag/samfunnsøkonomi/">Se mer →</a>
                 </div>
-                <img src="/assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
+                <img src="/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" class="fag-bilde">
             </div>
         </div>
     </main>
