Fikset opp en del mappestruktur og la til en mal

--- a/index.html
+++ b/index.html
@@ -19,10 +19,17 @@
         </div>
     </header>
     <main>
-        <a href="./realfag/">Realfag lesgo</a>
+        <div id="programområder">
+            <div>Programområder: </div>
+            <a href="/realfag/">Realfag</a>
+            <a href="/ssø/">SSØ</a>
+            <a href="/mk/">MK</a>
+            <a href="/kda/">KDA</a>
+            <a href="/idrettsfag/">Idrettsfag</a>
+        </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
-            <p id="intro">Velkommen til elvebakken programfas</p>
+            <p id="intro">Velkommen til elvebakken programfag! Velg et programområde for å utforske fag.</p>
         </div>
     </main>
     <!-- Footer -->
