--- a/ssø/index.html
+++ b/ssø/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style/global.css">
-    <link rel="stylesheet" href="/style/ssøoversikt.css">
+    <link rel="stylesheet" href="/ssø/ssø_oversikt.css">
     <link rel="stylesheet" href="/style/forside.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
     <title>Elvebakken SSØ</title>
@@ -24,9 +24,9 @@
             <div>Programområder: </div>
             <a href="/realfag/">Realfag</a>
             <a href="/ssø/">SSØ</a>
-            <a href="#">MK</a>
-            <a href="#">KDA</a>
-            <a href="#">Idrettsfag</a>
+            <a href="/mk/">MK</a>
+            <a href="/kda/">KDA</a>
+            <a href="/idrettsfag/">Idrettsfag</a>
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
