Mer uniformt mellom fagbruppene

--- a/mk/index.html
+++ b/mk/index.html
@@ -30,7 +30,7 @@
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
-            <p id="intro"></p>
+            <p id="intro">Velkommen til Elvebakken MK!</p>
         </div>
 
         <!-- meny over programfagene-->
