--- a/realfag/index.html
+++ b/realfag/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/realfag/realfag_soversikt.css">
     <link rel="stylesheet" href="/style/forside.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
-    <title>Elvebakken Realfag</title>
+    <title>Realfag</title>
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
         <div id="forside">
             <a href="https://elvebakken.vgs.no/" id="elvebakken-logo" target="_blank"><img src="/assets/imgs/elvebakken_logo/hvit_sirkel_bakgrunn.png" alt="Elvebakken-logo"></a>
 
-            <h1>Elvebakken realfag</h1>
+            <h1>Realfag</h1>
             <div id="ned-knapp"><a href="#intro-område"></a></div>
         </div>
     </header>
