Glemte å endre fagnanv

--- a/assets/maler/fag_side_2_fag/index.html
+++ b/assets/maler/fag_side_2_fag/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="/style/programfag.css">
     <link rel="stylesheet" href="fag.css">
     <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
-    <title>Geofag</title>
+    <title>Fagnavn</title>
 </head>
 <body>
     <header>
         <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i geofag.css-dokumentet -->
         <div id="forside-bilde">
-            <h1>Geofag</h1>
+            <h1>Fagnavn</h1>
             <!-- knapp tilbake til X -->
             <a href="/" id="tilbake-knapp">&lt; Tilbake til X</a>
         </div>
