La til engelsk med 2 midlertidlige bilder

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -47,8 +47,8 @@
                     <p>Entreprenørskap</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/programfag/engelsk/" class="fag_i_meny">
+                    <img src="/assets/imgs/engelsk/shakespear.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Engelsk</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -137,7 +137,7 @@
                     <p class="fag-sitat">"Language is power, life, and the instru-ment of culture, the instrument of domination, and liberation." - Angela Carter</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/engelsk/">Se mer →</a>
                 </div>
-                <img src="/assets/imgs/engelsk/" class="fag-bilde">
+                <img src="/assets/imgs/engelsk/britainflag.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="/assets/imgs/" class="fag-bilde">
