La til hifi og mal for fag med 1 fag

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -52,8 +52,8 @@
                     <p>Engelsk</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/programfag/hifi/" class="fag_i_meny">
+                    <img src="/assets/imgs/hifi/sokrates.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Historie og filosofi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -140,11 +140,14 @@
                 <img src="/assets/imgs/engelsk/britainflag.png" class="fag-bilde">
             </div>
             <div class="fag-element">
-                <img src="/assets/imgs/" class="fag-bilde">
+                <img src="/assets/imgs/hifi/sokrates.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Historie og filosofi</h3>
                     <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - </p>
+                    <p class="fag-sitat">"«
+                        Den som vet at
+                        han ingenting vet,
+                        er vis»" - Sokrates</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/hifi/">Se mer →</a>
                 </div>
             </div>
