Kinesisk 2 og andre fikser

--- a/programfag/engelsk/index.html
+++ b/programfag/engelsk/index.html
@@ -15,13 +15,14 @@
         <div id="forside-bilde">
             <h1>Engelsk</h1>
             <!-- knapp tilbake til X -->
-            <a href="/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
+            <a href="/ssø/" id="tilbake-knapp">&lt; Tilbake til SSØ</a>
         </div>
     </header>
     <main>
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
+                Engelsk 1 tar deg med på en spennende reise inn i den engelskspråklige verden. Gjennom analyser av aktuelle debatter, litteratur og selvvalgte temaer, utvikler du både språkferdighetene dine og din forståelse av ulike kulturer. Samarbeid, selvstendig arbeid og muntlige presentasjoner er sentrale deler av faget.
             </p>
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
