--- a/ssø/index.html
+++ b/ssø/index.html
@@ -57,8 +57,8 @@
                     <p>Historie og filosofi</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
-                <a href="/programfag/entreprenørskap/" class="fag_i_meny">
-                    <img src="/assets/imgs/fysikk/placeholder_fysikk.png" alt="test bilde" class="fagmeny_bilde">
+                <a href="/programfag/kinesisk2/" class="fag_i_meny">
+                    <img src="/assets/imgs/kinesisk2/flag.png" alt="test bilde" class="fagmeny_bilde">
                     <p>Kinesisk 2</p>
                     <img src="/assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
@@ -133,7 +133,7 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Engelsk</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Engelsk 1 tar deg med på en spennende reise inn i den engelskspråklige verden. Gjennom analyser av aktuelle debatter, litteratur og selvvalgte temaer, utvikler du både språkferdighetene dine og din forståelse av ulike kulturer. Samarbeid, selvstendig arbeid og muntlige presentasjoner er sentrale deler av faget.</p>
                     <p class="fag-sitat">"Language is power, life, and the instru-ment of culture, the instrument of domination, and liberation." - Angela Carter</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/engelsk/">Se mer →</a>
                 </div>
@@ -143,7 +143,7 @@
                 <img src="/assets/imgs/hifi/sokrates.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Historie og filosofi</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Historie og filosofi tar deg med på en reise gjennom tidene, fra de første menneskene til vår egen samtid. Gjennom diskusjoner, kildearbeid og filosofiske samtaler får du utforske store spørsmål om liv, død, samfunn og vitenskap. Dette faget gir deg verktøy til å tenke kritisk, analysere informasjon og uttrykke deg klart. Det er perfekt for deg som er nysgjerrig på verden og ønsker å utvikle dine analytiske ferdigheter.</p>
                     <p class="fag-sitat">"«
                         Den som vet at
                         han ingenting vet,
@@ -154,11 +154,11 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Kinesisk 2</h3>
-                    <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - r</p>
+                    <p class="fag-beskrivelse">Kinesisk 2 gir deg en unik mulighet til å dykke ned i det kinesiske språk og kultur. Gjennom praktiske øvelser, diskusjoner og et spennende universitetsopphold i Kina, utvikler du dine språkferdigheter og får en dypere forståelse for landet.</p>
+                    <p class="fag-sitat">"Språk åpner dører, Kinesisk åpner døra til Kina."</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/kinesisk2/">Se mer →</a>
                 </div>
-                <img src="/assets/imgs/" class="fag-bilde">
+                <img src="/assets/imgs/kinesisk2/wall_china.png" class="fag-bilde">
             </div>
             <div class="fag-element">
                 <img src="/assets/imgs/" class="fag-bilde">
