--- a/programfag/hifi/index.html
+++ b/programfag/hifi/index.html
@@ -22,7 +22,7 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-
+                Historie og filosofi tar deg med på en reise gjennom tidene, fra de første menneskene til vår egen samtid. Gjennom diskusjoner, kildearbeid og filosofiske samtaler får du utforske store spørsmål om liv, død, samfunn og vitenskap. Dette faget gir deg verktøy til å tenke kritisk, analysere informasjon og uttrykke deg klart. Det er perfekt for deg som er nysgjerrig på verden og ønsker å utvikle dine analytiske ferdigheter.
             </p>
         </div>
         <!-- bølgete linje -->
