--- a/ssø/index.html
+++ b/ssø/index.html
@@ -190,7 +190,12 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Psykologi</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Psykologi handler om å forstå menneskets
+                        tanker, emosjoner og atferd. Faget skal gi et
+                        vitenskapelig perspektiv på psykologiske
+                        prosesser og bidra til at elevene utvikler en
+                        sammensatt og mer helhetlig forståelse av
+                        mennesket.</p>
                     <p class="fag-sitat">"" - r</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/psykologi/">Se mer →</a>
                 </div>
@@ -200,7 +205,7 @@
                 <img src="/assets/imgs/rettslære/placeholder_rettslære.jpg" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Rettslære</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Lov og rett er en byggestein i et demokratisk samfunn. Kjennskap til lover og regler er viktig både for den enkelte og for samfunnet. </p>
                     <p class="fag-sitat">"" - </p>
                     <a class ="fag-se-mer-knapp" href="/programfag/rettslære/">Se mer →</a>
                 </div>
@@ -208,7 +213,7 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Samfunnsgeografi</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">I Samfunnsgeografi studerer vi sammenhengenen mellom det lokale, regionale og globale. Du får engasjert deg i de problemene samfunnet står overfor. Faget tar for seg noen av de mest sentrale globale samfunnsutfordringene som nevnt i FNs bærekraftsmål.</p>
                     <p class="fag-sitat">"" - r</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/samfunnsgeografi/">Se mer →</a>
                 </div>
@@ -226,7 +231,7 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Matematikk-R</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Matematikk R på Elvebakken handler om å forstå moderne anvendelser av matematikk i realfaglige og samfunnsfaglige sammenhenger. Faget gir elevene mulighet til å utvikle et presist språk for kritisk tenkning, evne til problemløsing og matematisk forståelse.</p>
                     <p class="fag-sitat">"" - r</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/r_matte/">Se mer →</a>
                 </div>
@@ -236,7 +241,7 @@
                 <img src="/assets/imgs/matte_s/matte_s_placeholder.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Matematikk-S</h3>
-                    <p class="fag-beskrivelse"></p>
+                    <p class="fag-beskrivelse">Matematikk S på Elvebakken er et fag som tar sikte på å gi elevene en inngående forståelse av moderne anvendelser av matematikk, spesielt innen samfunnsfaglige og økonomiske områder. Målet er å utruste elevene med en solid matematisk kompetanse og evne til å takle komplekse problemstillinger som oppstår i disse kontekstene.</p>
                     <p class="fag-sitat">"" - </p>
                     <a class ="fag-se-mer-knapp" href="/programfag/s_matte/">Se mer →</a>
                 </div>
@@ -244,8 +249,11 @@
             <div class="fag-element">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Samfunnsøkonomi</h3>
-                    <p class="fag-beskrivelse"></p>
-                    <p class="fag-sitat">"" - r</p>
+                    <p class="fag-beskrivelse">Samfunnsøkonomi handler om å forstå det
+                        økonomiske samspillet mellom ulike aktører
+                        i privat og offentlig sektor i Norge, og mellom
+                        Norge og andre land.</p>
+                    <p class="fag-sitat">"Earth provides enough to satisfy everyman’s needs, but not everyman’s greed." - Mahatma Gandhi</p>
                     <a class ="fag-se-mer-knapp" href="/programfag/samfunnsøkonomi/">Se mer →</a>
                 </div>
                 <img src="/assets/imgs/samfunnsøkonomi/placeholder_samfunnsøkonomi.webp" class="fag-bilde">
