--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/global.css">
-    <link rel="stylesheet" href="style/forside.css">
-    <link rel="icon" href="/assets/icons/favicon.png" type="image/png">
+    <link rel="stylesheet" href="./style/global.css">
+    <link rel="stylesheet" href="./style/forside.css">
+    <link rel="icon" href="./assets/icons/favicon.png" type="image/png">
     <title>Elvebakken Programfag</title>
 </head>
 <body>
@@ -21,11 +21,11 @@
     <main>
         <div id="programområder">
             <div>Programområder: </div>
-            <a href="/realfag/">Realfag</a>
-            <a href="/ssø/">SSØ</a>
-            <a href="/mk/">MK</a>
-            <a href="/kda/">KDA</a>
-            <a href="/idrettsfag/">Idrettsfag</a>
+            <a href="./realfag/">Realfag</a>
+            <a href="./ssø/">SSØ</a>
+            <a href="./mk/">MK</a>
+            <a href="./kda/">KDA</a>
+            <a href="./idrettsfag/">Idrettsfag</a>
         </div>
         <!-- informerende tekst som introduserer "programfagstypen" -->
         <div id="intro-område">
