--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <base href="https://sondre-nb.github.io">
+    <base href="https://sondre-nb.github.io/">
     <link rel="stylesheet" href="style/global.css">
     <link rel="stylesheet" href="style/forside.css">
     <link rel="icon" href="assets/icons/favicon.png" type="image/png">
