Endrer ting i realfag nå, og håper på det beste
Igjen, hjelp, har ikke peiling på noen ting her

--- a/realfag/index.html
+++ b/realfag/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="https://sondre-nb.github.io/Fagvalgsider_Elvebakken_VGS/realfag">
     <link rel="stylesheet" href="/style/global.css">
     <link rel="stylesheet" href="/realfag/realfag_soversikt.css">
     <link rel="stylesheet" href="/style/forside.css">
